plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.4'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.sekhanov'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-aop'
	implementation 'org.liquibase:liquibase-core'
	implementation 'org.postgresql:postgresql'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	compileOnly 'org.projectlombok:lombok:1.18.30'
	annotationProcessor 'org.projectlombok:lombok:1.18.30'

	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

	implementation 'org.springframework.boot:spring-boot-starter-mail'

    implementation("org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.13")

	testImplementation("com.h2database:h2:2.3.232")

    implementation 'com.resend:resend-java:3.0.0'
}

tasks.named('test') {
	jvmArgs += "-Xshare:off"
	useJUnitPlatform()
	jvmArgs "-javaagent:${configurations.testRuntimeClasspath.files.find { it.name.contains('mockito-core') }}",
			"-XX:+EnableDynamicAgentLoading"
}